feat: sell RO parts out of inventory when RO is cashiered
update Part On Hand Quantity when a Repair Order is cashiered